More warning-squash

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build100:
   timeout: 60m
   script:
     - BUILDTYPE=Release
-    - BUILD=build/FORTRAN=1/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DFORTRAN=1 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j2  && (time ctest || ctest -V)
+    - BUILD=build/FORTRAN=1/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DCMAKE_CXX_FLAGS="-Werror -Wall" -DFORTRAN=1 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j2  && (time ctest || ctest -V)
 build111:
   tags:
     - linux-farm
@@ -23,7 +23,7 @@ build111:
   script:
     - export MPIPROCS=2
     - BUILDTYPE=Release
-    - BUILD=build/FORTRAN=1/MPI=1/PPIDD=1 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DFORTRAN=1 -DMPI=1 -DPPIDD=1 $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
+    - BUILD=build/FORTRAN=1/MPI=1/PPIDD=1 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DCMAKE_CXX_FLAGS="-Wall" -DFORTRAN=1 -DMPI=1 -DPPIDD=1 $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
 build1110:
   tags:
     - linux-farm
@@ -35,7 +35,7 @@ build1110:
   script:
     - export MPIPROCS=2
     - BUILDTYPE=Release
-    - BUILD=build/FORTRAN=1/MPI=1/PPIDD=1/HDF5=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DFORTRAN=1 -DMPI=1 -DPPIDD=1 -DLINEARALGEBRA_ARRAY_HDF5=OFF $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
+    - BUILD=build/FORTRAN=1/MPI=1/PPIDD=1/HDF5=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DCMAKE_CXX_FLAGS="-Wall" -DFORTRAN=1 -DMPI=1 -DPPIDD=1 -DLINEARALGEBRA_ARRAY_HDF5=OFF $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
 build000:
   tags:
     - linux-farm
@@ -46,7 +46,7 @@ build000:
   timeout: 60m
   script:
     - BUILDTYPE=Release
-    - BUILD=build/FORTRAN=0/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DFORTRAN=0 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
+    - BUILD=build/FORTRAN=0/MPI=0/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE}  -DCMAKE_CXX_FLAGS="-Werror -Wall" -DFORTRAN=0 -DMPI=0 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
 build010:
   tags:
     - linux-farm
@@ -58,7 +58,7 @@ build010:
   script:
     - export MPIPROCS=2
     - BUILDTYPE=Release
-    - BUILD=build/FORTRAN=0/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DFORTRAN=0 -DMPI=1 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
+    - BUILD=build/FORTRAN=0/MPI=1/PPIDD=0 ; mkdir -p $BUILD && cd $BUILD && pwd && time cmake -DCMAKE_BUILD_TYPE=${BUILDTYPE} -DCMAKE_CXX_FLAGS="-Werror -Wall" -DFORTRAN=0 -DMPI=1 -DPPIDD=0 $OLDPWD && time cmake --build . -- -j2 && (time ctest || ctest -V)
 build011:
   tags:
     - linux-farm
