--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(LinearAlgebra CXX)
 include(FetchContent)
 FetchContent_Declare(
         LibraryManager
-        GIT_REPOSITORY https://gitlab+deploy-token-178345:RQZa2rmdwnV7Hdwg8XEq@gitlab.com/molpro/LibraryManager.git
+        GIT_REPOSITORY https://gitlab.com/molpro/LibraryManager.git
         GIT_TAG 0.7.4
 )
 FetchContent_MakeAvailable(LibraryManager)
