migrate-to-github (#178)
Migrate to GitHub
Change name back to iterative-solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
-project(LinearAlgebra CXX)
+project(iterative-solver CXX)
 
 include(FetchContent)
 FetchContent_Declare(
         LibraryManager
-        GIT_REPOSITORY https://gitlab.com/molpro/LibraryManager.git
-        GIT_TAG 0.8.2
+        GIT_REPOSITORY https://github.com/molpro/library-manager.git
+        GIT_TAG 0.11.3
 )
 FetchContent_MakeAvailable(LibraryManager)
 
@@ -15,7 +15,7 @@ LibraryManager_Project(FORTRAN_OPTION MPI_OPTION)
 ### Options
 
 if (NOT MPI AND FORTRAN)
-    message(FATAL_ERROR "Fortran serial implementation for LinearAlgebra is not yet ready") # TODO complete Fortran Serial implementation
+    message(FATAL_ERROR "Fortran serial implementation for iterative-solver is not yet ready") # TODO complete Fortran Serial implementation
 endif ()
 option(PPIDD "Whether to build on PPIDD" OFF)
 option(LINEARALGEBRA_ARRAY_MPI3 "Build with MPI3 implementation of distributed array" ${MPI})
@@ -25,11 +25,11 @@ option(MPIFORTRAN "Build MPI fortran examples, using fortran MPI library" OFF)
 if (PPIDD AND NOT PPIDD-GA)
     set(LINEARALGEBRA_ARRAY_GA OFF)
 endif ()
-message(STATUS "LinearAlgebra: MPI=${MPI}")
-message(STATUS "LinearAlgebra: FORTRAN=${FORTRAN}")
-message(STATUS "LinearAlgebra: LINEARALGEBRA_ARRAY_MPI3=${LINEARALGEBRA_ARRAY_MPI3}")
-message(STATUS "LinearAlgebra: LINEARALGEBRA_ARRAY_GA=${LINEARALGEBRA_ARRAY_GA}")
-message(STATUS "LinearAlgebra: LINEARALGEBRA_ARRAY_HDF5=${LINEARALGEBRA_ARRAY_HDF5}")
+message(STATUS "iterative-solver: MPI=${MPI}")
+message(STATUS "iterative-solver: FORTRAN=${FORTRAN}")
+message(STATUS "iterative-solver: LINEARALGEBRA_ARRAY_MPI3=${LINEARALGEBRA_ARRAY_MPI3}")
+message(STATUS "iterative-solver: LINEARALGEBRA_ARRAY_GA=${LINEARALGEBRA_ARRAY_GA}")
+message(STATUS "iterative-solver: LINEARALGEBRA_ARRAY_HDF5=${LINEARALGEBRA_ARRAY_HDF5}")
 ##############################
 
 
