--- a/src/molpro/linalg/CMakeLists.txt
+++ b/src/molpro/linalg/CMakeLists.txt
@@ -14,17 +14,17 @@ target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
 
 if (MPI)
-    message(STATUS "Building LinearAlgebra on MPI")
+    message(STATUS "Building iterative-solver on MPI")
     LibraryManager_Append(${PROJECT_NAME} SOURCES IterativeSolverCMPI.cpp)
     target_compile_definitions(${PROJECT_NAME} PUBLIC HAVE_MPI_H)
     target_link_libraries(${PROJECT_NAME} PUBLIC MPI::MPI_CXX)
 else ()
     LibraryManager_Append(${PROJECT_NAME} SOURCES IterativeSolverCSerial.cpp)
-    message(STATUS "Building serial LinearAlgebra")
+    message(STATUS "Building serial iterative-solver")
 endif ()
 
 if (TARGET ppidd::ppidd)
-    message(STATUS "Building LinearAlgebra on PPIDD library")
+    message(STATUS "Building iterative-solver on PPIDD library")
     target_link_libraries(${PROJECT_NAME} PUBLIC ppidd::ppidd)
     target_compile_definitions(${PROJECT_NAME} PUBLIC HAVE_PPIDD_H)
 endif ()
@@ -56,7 +56,7 @@ if (NOT TARGET Eigen3::Eigen)
         add_library(Eigen3::Eigen ALIAS eigen)
     endif ()
 else ()
-    message(STATUS "LinearAlgebra: Eigen3::Eigen target already defined")
+    message(STATUS "iterative-solver: Eigen3::Eigen target already defined")
 endif ()
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     set(EIGEN_DONT_VECTORIZE ON)
