--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -7,7 +7,7 @@ endif ()
 find_package(Threads)
 
 if (MPI AND LINEARALGEBRA_ARRAY_HDF5 AND NOT HDF5_IS_PARALLEL)
-    message(FATAL_ERROR "Parallel HDF5 is required when building LinearAlgebra with MPI and HDF5 on")
+    message(FATAL_ERROR "Parallel HDF5 is required when building iterative-solver with MPI and HDF5 on")
 endif ()
 
 if (LINEARALGEBRA_ARRAY_HDF5)
