--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,10 +1,11 @@
 name: Docker build and publish
 
 on:
-  [push,fork]:
+  push:
     paths:
       - docker/Dockerfile
       - .github/workflows/docker-publish.yml
+  workflow_dispatch:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
