--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -38,6 +38,7 @@ if (MPI)
             testLockMPI3.cpp
             testDistrFlags.cpp
             testGemm.cpp
+            testResource.cpp
             )
     if (LINEARALGEBRA_ARRAY_MPI3)
         target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayMPI3.cpp testDistrArrayFile.cpp
