Simplified BufferManager that works on arrays of arrays (#492)

--- a/src/molpro/linalg/array/util/CMakeLists.txt
+++ b/src/molpro/linalg/array/util/CMakeLists.txt
@@ -1,6 +1,6 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES temp_file.cpp
-        PUBLIC_HEADER Distribution.h select.h select_max_dot.h temp_file.h TempHandle.h gemm.h)
+        SOURCES temp_file.cpp BufferManager.cpp
+        PUBLIC_HEADER Distribution.h select.h select_max_dot.h temp_file.h TempHandle.h gemm.h BufferManager.h)
 
 if (LINEARALGEBRA_ARRAY_HDF5)
     LibraryManager_Append(${PROJECT_NAME}
