--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -40,7 +40,7 @@ if (MPI)
             testGemm.cpp
             )
     if (LINEARALGEBRA_ARRAY_MPI3)
-        target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayMPI3.cpp testDistrArrayFile.cpp
+        target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayMPI3.cpp testDistrArrayFile.cpp testBufferManager.cpp
                         testDistrArraySpan.cpp parallel_util.cpp
                         testArrayHandlerDistr.cpp testArrayHandlerDistrSparse.cpp testArrayHandlers.cpp)
     endif ()
