--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ Homepage = "https://github.com/molpro/iterative-solver"
 Issues = "https://github.com/molpro/iterative-solver/issues"
 
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "Cython>=3", "numpy>=1.26"]
+requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "Cython>=3", "numpy>=1.26", "cmake"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
