Investigate slow convergence of linear equations solution

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,7 @@ if (FORTRAN
             OptimizeExampleF.F90
             OptimizeExampleF-problem.F90
             LinearEigensystemExampleF-problem.F90
+            LinearEquationsSmall.f90
             )
 endif ()
 set(EXAMPLES
