--- a/.github/workflows/sphinx-publish.yml
+++ b/.github/workflows/sphinx-publish.yml
@@ -1,10 +1,10 @@
 name: Pages
 on:
   push:
-#    tags:
-#      - '*'
-#    branches:
-#    - master
+    tags:
+      - '*'
+    branches:
+    - master
 jobs:
   build:
     runs-on: ubuntu-latest
