--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
-        with:
-          environment-file: python/environment.yml
+#        with:
+#          environment-file: python/environment.yml
+      - run: bash python/build.sh
       - run: conda info
       - run: conda list
       - run: conda config --show
-      - run: bash python/build.sh
       - run: python python/test/test_rayleigh_quotient.py
