--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   python-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
     permissions:
       contents: write
       packages: write
@@ -19,6 +22,9 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
 #        with:
 #          environment-file: python/environment.yml
+      - run: conda info
+      - run: conda list
+      - run: conda config --show
       - run: bash python/build.sh
       - run: conda info
       - run: conda list
