--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -30,4 +30,4 @@ jobs:
       - run: conda list
       - run: conda config --show
       - run: python python/test/test_rayleigh_quotient.py
-      - run: cd python && python -m unittest
+      - run: cd python/test && python -m unittest
