Disable unfinished python doc CI

--- a/.github/workflows/sphinx-publish.yml
+++ b/.github/workflows/sphinx-publish.yml
@@ -2,9 +2,9 @@ name: Pages
 on:
   push:
     tags:
-      - '*'
+      - 'none*'
     branches:
-    - master
+    - none
 jobs:
   build:
     runs-on: ubuntu-latest
