Disable HDF5 by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif ()
 option(PPIDD "Whether to build on PPIDD" OFF)
 option(LINEARALGEBRA_ARRAY_MPI3 "Build with MPI3 implementation of distributed array" ${MPI})
 option(LINEARALGEBRA_ARRAY_GA "Build with GA implementation of distributed array" ${MPI})
-option(LINEARALGEBRA_ARRAY_HDF5 "Build with HDF5 implementation of distributed array" ${MPI})
+option(LINEARALGEBRA_ARRAY_HDF5 "Build with HDF5 implementation of distributed array" OFF)
 option(MPIFORTRAN "Build MPI fortran examples, using fortran MPI library" OFF)
 option(LIBRARY_ONLY "Build only the library" OFF)
 if (PPIDD AND NOT PPIDD-GA)
