--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,42 +15,42 @@ jobs:
 
   cmake-build:
     runs-on: ubuntu-latest
+    timeout-minutes: 12
     permissions:
       contents: write
       packages: write
     container:
       # relies on repository name being all lower case
       image: ghcr.io/${{ github.repository }}
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    defaults:
-      run:
-        shell: bash -el {0}
+#      credentials:
+#        username: ${{ github.actor }}
+#        password: ${{ secrets.GITHUB_TOKEN }}
+#    defaults:
+#      run:
+#        shell: bash -el {0}
 
     steps:
     - uses: actions/checkout@v3
-
     - name: Check existence of build configuration file
       id: check_configuration
       uses: andstor/file-existence-action@v1
       with:
         files: "CMakeLists.txt"
 
-    - name: ccache
-      uses: hendrikmuhs/ccache-action@v1.2
+#    - name: ccache
+#      uses: hendrikmuhs/ccache-action@v1.2
 
     - name: Configure CMake
       if: steps.check_configuration.outputs.files_exists == 'true'
-      run: conda deactivate; cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}} -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
+      run: PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}} # -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
 
     - name: Build
       if: steps.check_configuration.outputs.files_exists == 'true'
-      run: cmake --build ${{github.workspace}}/build --config ${{env.CMAKE_BUILD_TYPE}}
+      run: PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin cmake --build ${{github.workspace}}/build --config ${{env.CMAKE_BUILD_TYPE}}
 
     - name: Test
       if: steps.check_configuration.outputs.files_exists == 'true'
-      run: cd ${{github.workspace}}/build && ctest -C ${{env.CMAKE_BUILD_TYPE}}
+      run: cd ${{github.workspace}}/build && PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin ctest -C ${{env.CMAKE_BUILD_TYPE}} -VV || ctest -C ${{env.CMAKE_BUILD_TYPE}} --rerun-failed --output-on-failure -VV
 
     - name: Build doxygen
       run: cmake --build ${{github.workspace}}/build --target DependencyManagerDocs
