one call interface (#512)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,13 +2,11 @@ if (FORTRAN
         AND NOT CMAKE_Fortran_COMPILER_ID STREQUAL "Intel"  # avoid the challenge of linking C++ and Fortran with Intel
         )
     set(ITERATIVESOLVER_FORTRAN_EXAMPLES
-#            LinearEigensystemExampleF-Pspace-adaptive.F90
-            LinearEigensystemExampleF-Pspace.F90
+            LinearEigensystemExampleF.F90
             LinearEquationsExampleF.F90
-            OptimizeExampleF.F90
-            OptimizeExampleF-problem.F90
-            LinearEigensystemExampleF-problem.F90
-            )
+            LinearEquationsExampleF-matrix.F90
+            NonLinearExampleF.F90
+    )
 endif ()
 set(EXAMPLES
         LinearEigensystemExample.cpp
@@ -20,18 +18,6 @@ set(EXAMPLES
         OptimizeDistrArrayExample.cpp
         ${ITERATIVESOLVER_FORTRAN_EXAMPLES}
         )
-if (LINEARALGEBRA_ARRAY_MPI3 AND MPI)
-    list(APPEND EXAMPLES
-            )
-    if (FORTRAN
-            AND MPIFORTRAN
-            )
-        list(APPEND EXAMPLES
-                LinearEigensystemExampleF-mpi.F90
-                LinearEigensystemExampleF-Pspace-mpi.F90
-                )
-    endif ()
-endif ()
 
 if (FORTRAN AND MPI AND MPIFORTRAN)
     find_package(MPI COMPONENTS Fortran)
