valgrind testing on demand

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -49,6 +49,9 @@ foreach (fil ${EXAMPLES})
     else ()
         add_test(${nam} ${PROJECT_BINARY_DIR}/${test_name})
     endif ()
+    if (VALGRIND)
+        add_test(valgrind-${nam} valgrind --error-exitcode=1 --leak-check=full ${PROJECT_BINARY_DIR}/${test_name})
+    endif ()
 endforeach ()
 
 if (BENCHMARK AND FORTRAN)
