--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,9 @@ include(GoogleTest)
 add_executable(test-${PROJECT_NAME}-test test.cpp)
 target_link_libraries(test-${PROJECT_NAME}-test PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-test)
+if (VALGRIND)
+  add_test(valgrind-${PROJECT_NAME}-test valgrind --error-exitcode=1 --leak-check=full test-${PROJECT_TEST}-test)
+endif ()
 
 
 
